Run npm run generate:server:latest
