# server/openapi_server/controllers/tool_controller.py
@@ -1,5 +1,6 @@
 from openapi_server.models.tool import Tool  # noqa: E501
 from openapi_server.models.tool_dependencies import ToolDependencies  # noqa: E501
+from openapi_server.models.tool_type import ToolType
 from openapi_server.models.license import License
 
 
@@ -20,7 +21,7 @@ def get_tool():  # noqa: E501
         author="NLP Sandbox Team",
         author_email="team@nlpsandbox.io",
         url="https://github.com/nlpsandbox/id-annotator-example",
-        type="nlpsandbox:id-annotator",
+        type=ToolType.ID_ANNOTATOR,
         api_version="1.1.2"
     )
     return tool, 200
